test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/generate/block-exec-in-pods/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pci
