test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/generate/block-exec-in-pods/validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
    reports.kyverno.io/enabled: "true"
  name: cpol-deny-exec-by-namespace-name
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: deny-exec-by-namespace-name
spec:
  failurePolicy: Fail
  matchConditions:
  - expression: request.operation == 'CONNECT'
    name: operation-should-be-connect
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      - CONNECT
      - DELETE
      resources:
      - pods/exec
      scope: '*'
  validations:
  - expression: request.namespace != 'pci'
    message: Pods in this namespace may not be exec'd into.
