test/conformance/chainsaw/_step-templates/cluster-policy-ready.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/steptemplate-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: cluster-policy-ready
spec:
  try:
  - assert:
      template: true
      resource:
        apiVersion: kyverno.io/v1
        kind: ClusterPolicy
        metadata:
          name: ($name)
        status:
          conditions:
          - reason: Succeeded
            status: "True"
            type: Ready
